Fixed the horizontal scroll on smaller devices in about page

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -217,8 +217,7 @@ footer .social-links a:hover {
   }
 
   .my-photo {
-    margin: 20px;
-    width: 100%;
+    width: 90%;
   }
 }
 
